--- a/src/components/landing.scss
+++ b/src/components/landing.scss
@@ -1,21 +1,35 @@
 // white background #ece9e8
 
 .home{
+  position: relative;
   background-color: #ece9e8;
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center;
+  width: 100%;
 
   &--left{
     width: 50%;
   }
   &--right{
+    width: 50%;
+    // overflow: hidden;
+    position: relative;
+    &-error{
+      position: absolute;
+      padding: 40px 0px;
+
+      background-color: black;
+      color: white;
+      width: 100%;
+      text-align: center;
+    }
     height: 100vh;
     box-shadow: 3px 3px 5px 10px rgba(5, 5, 5, 0.308);
     background-image: linear-gradient(to right bottom, #c2c2c2,#f3f2f2);
     // background-color: #f3f2f2;
-    width: 50%;
+    
   }
 
 }
