--- a/src/components/right/login.scss
+++ b/src/components/right/login.scss
@@ -1,4 +1,5 @@
 .login{
+  position: relative;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -13,7 +14,7 @@
    padding: 10px 0px;
 
    &--buttons{
-     width: 69%;
+     width: 34.5vw;
      display: flex;
      flex-direction: column;
      justify-content: center;
@@ -35,6 +36,7 @@
    width: 100%;
    height: 40px;
   //  padding: 10px 25px;
+  // padding: 0px 55px;
    font-size: 1.2rem;
    border-radius: 30px;
    border: 1px solid black;
@@ -78,5 +80,4 @@ input[type=password]:focus {
    outline: none;
    background-color: #e6e6e6;
 }
-
 }
