--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -8,7 +8,6 @@
     // background-color: rgba(105, 109, 109, 0.295);
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-
     h4{
       overflow: hidden;
       font-size: 1rem;
@@ -57,6 +56,11 @@
     align-items: center;
     background-color: rgb(0, 0, 0);
     color: white;
+    
+    h4{
+      padding-right: 10px;
+      margin-right: auto;
+    }
     span {
       cursor: pointer;
       font-size: 1rem;
