--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -48,19 +48,27 @@
       transform: translateX(-100%);
     }
   }
-
+  &-name{
+    h4{
+      font-weight: 500;
+      &:not(:first-child){
+        padding-left: 20px;
+      }
+    }
+    display: flex;
+    padding-right: 10px;
+    margin-right: auto;
+    
+  }
   &-mini {
-    padding: 5px;
+    padding: 10px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     background-color: rgb(0, 0, 0);
     color: white;
     
-    h4{
-      padding-right: 10px;
-      margin-right: auto;
-    }
+    
     span {
       cursor: pointer;
       font-size: 1rem;
@@ -80,5 +88,13 @@
     font-size: 6.5rem;
     text-align: center;
     font-family: NewTimes;
+   
+  }
+  &-update-date{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+
   }
 }
