--- a/src/components/home/cards/card.scss
+++ b/src/components/home/cards/card.scss
@@ -2,22 +2,22 @@
   margin: 15px 20px;
   #logo {
     padding: 10px;
-    width: 10%;
+    width: 150px;
     border-left: 4px solid rgb(182, 29, 29);
   }
-  // background-color: rgba(207, 204, 204, 0.856);
-
-  // box-shadow: 3px 5px 7px 7px rgba(5, 5, 5, 0.308);
   &-ul {
     padding: 10px;
     display: grid;
     grid-column-gap: 15px;
     grid-row-gap: 10px;
-    grid-template-columns: repeat(4, 1fr);
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+    
     li {
       width: 100%;
       color: white;
-      
+
       a {
         color: white;
         text-decoration: none;
@@ -28,8 +28,6 @@
           }
         }
       }
-
-      
 
       list-style: none;
       span {
@@ -75,13 +73,24 @@
         }
       }
       &-0 {
+        @media (min-width: 768px) {
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row-start: 1;
         grid-row-end: 3;
+        }
+        
         span {
           font-size: 2rem !important;
-          padding: 5px 0px;
+          @media (max-width: 300px) {
+            padding: 5px 0px;
+          }
+          
+          @media (min-width: 300px) {
+            padding-top: 5px;
+            font-size: 1.3rem !important;
+          }
+          
         }
       }
     }
@@ -97,6 +106,12 @@
     grid-row-gap: 10px;
     padding: 10px;
     grid-template-columns: auto auto auto;
+    @media (max-width: 850px) {
+      grid-template-columns: auto auto;
+    }
+    @media (max-width: 605px) {
+      grid-template-columns: auto;
+    }
     li {
       min-height: 25vh;
       list-style: none;
@@ -152,44 +167,51 @@
   }
 }
 
-
 // The Wall Street Jurnal Card
 .wsj {
-  
   margin: 20px;
   // background-color: rgba(185, 184, 184, 0.377);
   // box-shadow: 3px 5px 7px 7px rgba(5, 5, 5, 0.308);
-  img{
-     padding: 15px;
-     border-left: 4px solid black;
-     max-width: 100%;
+  img {
+    padding: 15px;
+    border-left: 4px solid black;
+    max-width: 100%;
   }
 
   &--ul {
     display: flex;
-    flex-direction: row;
+    // flex-direction: row;
+    @media (max-width: 700px) {
+      flex-direction: column;
+    }
+    
     &--left {
       width: 100%;
-      border-right: 1px solid rgb(158, 157, 157);
-      padding-right: 10px;
-      padding-left: 10px;
+      @media (min-width: 700px) {
+        border-right: 1px solid rgb(158, 157, 157);
+        padding-right: 10px;
+        padding-left: 10px;
+      }
+      
     }
-    &--center{
+    &--center {
+      @media (min-width: 700px) {
       width: 110%;
-      h3{
+      }
+      h3 {
         font-size: 1.7rem !important;
       }
 
-      span{
+      span {
         font-size: 1.2rem !important;
       }
-
-     
     }
     &--right {
       width: 100%;
+      @media (min-width: 700px) {
       border-left: 1px solid rgb(158, 157, 157);
       padding-left: 10px;
+      }
     }
   }
 
@@ -201,88 +223,108 @@
   span {
     display: block;
     width: 100%;
-    font-size: 1.1rem;  
+    font-size: 1.1rem;
     color: rgb(43, 42, 42);
   }
-  a{
+  a {
     text-decoration: none;
     color: inherit;
     cursor: pointer;
     transition: all 0.2s;
-    &:hover{
+    &:hover {
       color: rgba(51, 93, 155, 0.89);
     }
   }
-  span:after{
+  span:after {
     display: flex;
     content: "";
     border-bottom: 1px solid rgb(158, 157, 157);
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 20px;
-}
+  }
   ul {
     margin: 10px;
   }
   li {
     list-style: none;
-    
   }
 }
 
-.times-of-india{
+.times-of-india {
   margin: 20px;
   padding-bottom: 5px;
   // box-shadow: 3px 5px 7px 7px rgba(5, 5, 5, 0.562);
   // background-color: rgba(63, 62, 62, 0.377);
-  img{
+  img {
     display: block;
-    width: 15%;
+
+    width: 150px;
     padding-left: 10px;
     border-left: 4px solid rgb(161, 24, 24);
   }
-.toi{
-  position: relative;
-  margin: 10px;
-  display: flex;
-  justify-content: space-between;
-  &-latest{
-    width: 70%;
-    display: grid;
-    padding-top: 10px;
-    grid-template-columns: 1fr 1fr;
+  .toi {
+    position: relative;
+    margin: 10px;
+    display: flex;
+    @media (max-width: 700px) {
+      flex-direction: column;
+    }
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.788);
-    color: white;
-    border-radius: 30px;
-  }
-  &-top{
-    padding-top: 10px;
-    width: 30%;
-    margin-right: 2%;
-    background-color: rgba(0, 0, 0, 0.788);
-    color: white;
-    border-radius: 30px;
-  }
+    &-latest {
 
-  
-  a{
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
-    transition: all 0.5s;
-    &:hover{
-      color: rgb(62, 114, 224);
+      @media (max-width: 700px) {
+        margin-top: 10px;
+        text-align: center;
+        width: 100%;
+      }
+      @media (min-width: 700px) {
+        width: 70%;
+        grid-template-columns: 1fr 1fr;
+        justify-content: space-between;
+      }
+      
+      display: grid;
+      padding-top: 10px;
+    
+      
+      background-color: rgba(0, 0, 0, 0.788);
+      color: white;
+      border-radius: 30px;
+    }
+    &-top {
+      @media (max-width: 700px) {
+        margin-top: 10px;
+        text-align: center;
+        width: 100%;
+        padding-bottom: 10px;
+      }
+      padding-top: 10px;
+      @media (min-width: 700px) {
+        width: 30%;
+      }
+     
+      margin-right: 2%;
+      background-color: rgba(0, 0, 0, 0.788);
+      color: white;
+      border-radius: 30px;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+      cursor: pointer;
+      transition: all 0.5s;
+      &:hover {
+        color: rgb(62, 114, 224);
+      }
+    }
+    ul {
+      list-style: none;
+
+      li {
+        padding: 10px;
+      }
     }
   }
-  ul{
-    list-style: none;
-
-    li{
-      padding: 10px;
-    }
-  }
-
-
-}
 }
