--- a/src/components/home/filters/filters.scss
+++ b/src/components/home/filters/filters.scss
@@ -1,11 +1,22 @@
 .filters{
+  width: 100%;
   border-bottom: 1px solid black;
   padding:  15px 0px;
   display: flex;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    padding:  30px 0px;
+  }
   justify-content: space-between;
   align-items: center;
   transition: all 0.5s;
   &-checkbox{
+    @media (max-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      
+    }
     .not-selected{
       cursor: pointer;
       border: 1px solid black;
@@ -20,6 +31,10 @@
       cursor: pointer;
     }
     span{
+      @media (max-width: 768px) {
+        margin-bottom: 5px;
+        margin-right: 30px;
+      }
       text-align: center;
       margin: 0px 20px;
       width: 100%;
@@ -28,9 +43,17 @@
   }
   &-archive{
     display: flex;
+    @media (max-width: 768px) {
+      flex-direction: column;
+      padding-left: 20px;
+      
+    }
     align-items: center;
     font-size: 1.4rem;
-    padding-right: 20px;
+    @media (min-width: 768){
+      padding-right: 20px;
+    }
+    
     select{
       font-size: 1.2rem;
       padding: 0px 10px;
@@ -45,9 +68,6 @@
   }
   }
   }
-  .dates{
-    // border: 1px dashed red;
-    // height: 40px;
+ 
   
-  }
   
