--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -48,22 +48,23 @@
       transform: translateX(-100%);
     }
   }
-  &-name{
-    h4{
-      font-weight: 500;
-      &:not(:first-child){
-        padding-left: 20px;
-      }
-    }
-    display: flex;
-    padding-right: 10px;
-    margin-right: auto;
+  // &-name{
+  //   // h4{
+  //   //   font-weight: 500;
+  //   //   &:not(:first-child){
+  //   //     // padding-left: 20px;
+  //   //   }
+  //   // }
+  //   // // display: flex;
+  //   // padding-right: 10px;
+  //   // margin-right: auto;
     
-  }
+  // }
   &-mini {
-    padding: 10px;
+    
+    padding: 10px 5px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     background-color: rgb(0, 0, 0);
     color: white;
@@ -73,9 +74,9 @@
       cursor: pointer;
       font-size: 1rem;
       color: white;
-      margin-right: 5px;
+      // margin-right: 20px;
       &:not(:last-child) {
-        padding-right: 5px;
+        // padding-right: 5px;
         border-right: 1px solid white;
       }
       background-color: transparent;
