--- a/src/components/landing.scss
+++ b/src/components/landing.scss
@@ -11,9 +11,15 @@
 
   &--left{
     width: 50%;
+    @media (max-width: 850px){
+      display: none;
+    }
   }
   &--right{
     width: 50%;
+    @media (max-width: 850px){
+      width: 100%;
+    }
     // overflow: hidden;
     position: relative;
     &-error{
