--- a/src/components/right/signup.scss
+++ b/src/components/right/signup.scss
@@ -21,6 +21,9 @@
         background-repeat: no-repeat;
         background-size: 35px;
         width: 10vw;
+        @media (max-width: 850px){
+          width: 28vw;
+        }
       }
     }
 
@@ -31,6 +34,9 @@
         background-repeat: no-repeat;
         background-size: 40px;
         width: 30vw;
+        @media (max-width: 850px){
+          width: 70vw;
+        }
       }
     }
     &--password {
@@ -49,6 +55,9 @@
         background-repeat: no-repeat;
         background-size: 32px;
         width: 30vw;
+        @media (max-width: 850px){
+          width: 70vw;
+        }
       }
     }
 
@@ -71,6 +80,7 @@
     cursor: pointer;
     width: 100%;
     height: 40px;
+    
     // padding: 10px 30;
     font-size: 1.2rem;
     border-radius: 30px;
@@ -91,7 +101,7 @@
     border: none;
     border: 1px solid #a3a1a1;
     //  color: #a0d18c;
-    //  width: 30vw;
+    //  width: 20vw;
     height: 45px;
     padding-left: 55px;
     background-color: #e0e0e08a;
