--- a/src/components/landing.scss
+++ b/src/components/landing.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  background: linear-gradient(120deg, rgba(18,18,22,1) 50%, rgba(219, 13, 13, 0.322) 99%);
 
   &--left{
     width: 50%;
