--- a/src/components/home/cards/card.scss
+++ b/src/components/home/cards/card.scss
@@ -1,12 +1,12 @@
 .bbc-card {
-  margin: 15px 20px;
+  // margin: 15px 20px;
   #logo {
     padding: 10px;
     width: 150px;
     border-left: 4px solid rgb(182, 29, 29);
   }
   &-ul {
-    padding: 10px;
+    // padding: 10px;
     display: grid;
     grid-column-gap: 15px;
     grid-row-gap: 10px;
@@ -55,6 +55,7 @@
           z-index: 2;
           font-size: 1.2rem;
           height: 100%;
+          
           display: flex;
           flex-direction: column;
           justify-content: flex-end;
@@ -70,6 +71,7 @@
           &:hover {
             filter: brightness(100%);
           }
+          
         }
       }
       &-0 {
@@ -104,7 +106,7 @@
     display: grid;
     grid-column-gap: 15px;
     grid-row-gap: 10px;
-    padding: 10px;
+    // padding: 10px;
     grid-template-columns: auto auto auto;
     @media (max-width: 850px) {
       grid-template-columns: auto auto;
@@ -113,7 +115,7 @@
       grid-template-columns: auto;
     }
     li {
-      min-height: 25vh;
+      // min-height: 25vh;
       list-style: none;
       width: 100%;
       position: relative;
@@ -131,6 +133,7 @@
 
     img {
       width: 100%;
+      height: auto;
       position: relative;
       filter: brightness(80%);
       transition: all 0.5s;
@@ -150,6 +153,8 @@
         rgba(22, 21, 21, 0.801) 100%
       );
       height: 99%;
+      // max-height: 351px;
+      
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
@@ -169,7 +174,7 @@
 
 // The Wall Street Jurnal Card
 .wsj {
-  margin: 20px;
+  // margin: 20px;
   // background-color: rgba(185, 184, 184, 0.377);
   // box-shadow: 3px 5px 7px 7px rgba(5, 5, 5, 0.308);
   img {
