--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -1,4 +1,38 @@
 .header {
+  &-logo{
+    // width: 100%;
+    display: flex;
+    align-items: center;
+    // justify-content: space-between;
+    // padding-rit: -5%;
+  }
+  &-menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &-account{
+     &-content{
+      //  display: none;
+      span{
+        transition: all 0.1s ease-in;
+        cursor: pointer;
+        // color: rgb(77, 77, 77);
+        font-size: 1.1rem;
+        
+        &:hover{
+          color: gray;
+        }
+      }
+     }
+      img{
+        width: 2.5rem;
+        cursor: pointer;
+        
+      }
+      
+      
+    }
+  }
   width: 100%;
   overflow: hidden;
   &-headline {
@@ -6,8 +40,8 @@
     height: 30px;
     overflow: hidden !important;
     // background-color: rgba(105, 109, 109, 0.295);
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    // border-top: 1px solid black;
+    // border-bottom: 1px solid black;
     h4{
       overflow: hidden;
       font-size: 1rem;
@@ -85,10 +119,24 @@
     }
   }
   &-text {
-    padding: 15px 0px;
-    font-size: 6.5rem;
+    // width: 10%;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    padding-top: 3rem;
+    // padding-left: 5%;s
+
+    font-size: 2.5rem;
     font-family: NewTimes;
+    span{
+      // flex-direction: ;
+      font-family: NewTimes;
+    }
+    &-img{
+      display: inline;
+      width: 5rem;
+      margin-left: -2rem;
+    }
    
   }
   &-update-date{
