--- a/src/index.scss
+++ b/src/index.scss
@@ -87,7 +87,7 @@ video {
   font-family: 'Nunito Sans', sans-serif;
 }
 html,body{
-  
+  background-color: rgb(255, 255, 255);
   @media (max-width: 1100px) {
     font-size: 12.5px ;
   }
