--- a/src/components/Modals/Signin/Signin.scss
+++ b/src/components/Modals/Signin/Signin.scss
@@ -19,11 +19,20 @@
         justify-content: center;
         align-items: center;
         width: 700px;
+       
         height: 600px;
+        
+        
         background-color: black;
         z-index: 900;
         border-radius: 15px;
         color: rgb(221, 221, 221);
+        @media (max-width: 700px){
+            width: 100vw;
+            height: 100vh;
+            border-radius: 0px;
+           
+            }
         
     }
 }
