--- a/src/components/right/signup.scss
+++ b/src/components/right/signup.scss
@@ -1,118 +1,178 @@
-.signup {
-  height: 100vh;
+.registor{
+  position: relative;
+  height: 650px;
+  width: 500px;
+  // padding: 1.2rem;
+  
+  
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
-
-  h1{
-    padding-bottom: 20px;
-  }
-
-  &--input {
-    &--name {
-      padding: 10px;
-      display: flex;
-      width: 80%;
-      justify-content: space-around;
-      input[type="text"] {
-        background-image: url("../img/name.png");
-        background-position: 5px 5px;
-        background-repeat: no-repeat;
-        background-size: 35px;
-        width: 10vw;
-        @media (max-width: 850px){
-          width: 28vw;
-        }
-      }
+  justify-content: space-between;
+  background-color: rgba(128, 128, 128, 0.151);
+  border-radius: 10px;
+  color: white;
+  @media (max-width: 700px){
+    width: 100vw;
+    height: 100vh;
     }
+  
+  // h1{
+  //   padding-bottom: 20px;
+  // }
+  
+ &--input{
+   padding: 10px 0px;
 
-    &--email {
-      input[type=email] {
-        background-image: url("../img/email.png");
-        background-position: 10px 4px;
-        background-repeat: no-repeat;
-        background-size: 40px;
-        width: 30vw;
-        @media (max-width: 850px){
-          width: 70vw;
-        }
-      }
+   &--buttons{
+     width: 34.5vw;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     text-align: center; 
+     &--text{
+       padding: 10px 0px;
+     }
+   }
+
+  
+ }
+
+ .form{
+  height: 100%;
+  width: 100%;
+  // padding: 2.5rem;
+
+  &-registor{
+    &-hero{
+      font-family: NewTimes;
+      font-size: 3.5rem;
     }
-    &--password {
+      height: inherit;
       display: flex;
       flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      &-email,&-password,&-name{
+          display: flex;
+          flex-direction: column;
 
-      &-1 {
-        margin: 10px 0px;
       }
-      &-2 {
-        margin-bottom: 10px;
+      &-action{
+          display: flex;
+          flex-direction: column;
+          &-button{
+              button{
+                cursor: pointer;
+                  font-size: 1.2rem;
+                  display: flex;
+                  font-weight: 700;
+                  justify-content: center;
+                  align-items: center;
+                  padding: 10px 10px;
+                  width: 320px;
+                  background-color: rgb(252, 252, 252);
+                  img{
+                      padding-right: 5px;
+                      width: 35px;
+                  }
+              }
+          }
+          &-forgot{
+              cursor: pointer;
+              font-size: 0.8rem;
+              margin-bottom: 30px;
+          }
       }
-      input[type="password"] {
-        background-image: url("../img/lock.png");
-        background-position: 13px 5px;
-        background-repeat: no-repeat;
-        background-size: 32px;
-        width: 30vw;
-        @media (max-width: 850px){
-          width: 70vw;
-        }
+
+      &-signup-text{
+          color: rgb(243, 241, 241);
+          &-button{
+              cursor: pointer;
+              color: rgb(235, 230, 230);
+              font-weight: 700;
+              &:hover{
+                  color: rgb(255, 255, 255);
+                  text-decoration: underline;
+              }
+          }   
       }
-    }
+      input[type=email],
+      input[type=text],
+input[type=password]{
+  margin-top: 10px;
+transition: all 0.5s;
+//    font-size: 1.2rem;
+color: rgb(216, 216, 216);
+ border: none;
+ border: 1px solid #a3a1a1;
+ width: 300px;
 
-    &--signup{
-      padding-bottom: 10px;
-      width: 69%;
-    }
-
-    &--login{
-      width: 69%;
-      padding: 10px 0px;
-    }
-
+ height: 45px;
+ padding-left: 15px;
+ background-color: #e0e0e000;
   }
+  
+ 
+}
+}
 
-  button {
-    background-color: #e0e0e08a;
-    transition: all 0.2s;
-    outline: 0;
-    cursor: pointer;
-    width: 100%;
-    height: 40px;
-    
-    // padding: 10px 30;
-    font-size: 1.2rem;
-    border-radius: 30px;
-    border: 1px solid black;
-    &:hover {
-      background-color: #e6e6e6;
-    }
-  }
+ 
 
-  input[type="text"],
-  input[type=email],
-  input[type="password"] {
-    transition: all 0.5s;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    font-size: 1.2rem;
-    border: none;
-    border: 1px solid #a3a1a1;
-    //  color: #a0d18c;
-    //  width: 20vw;
-    height: 45px;
-    padding-left: 55px;
-    background-color: #e0e0e08a;
-  }
+//  button{
+//   transition: all 0.2s;
+//   background-color: #e0e0e08a;
+//   outline: 0;
+//    cursor: pointer;
+//    width: 100%;
+//    height: 40px;
+//   //  padding: 10px 25px;
+//   // padding: 0px 55px;
+//    font-size: 1.2rem;
+//    border-radius: 30px;
+//    border: 1px solid black;
+//    &:hover{
+//     background-color: #e6e6e6;
+//    }
+//  }
 
-  input[type="text"]:focus,
-  input[type=email]:focus,
-  input[type="password"]:focus {
-    outline: none;
-    background-color: #e6e6e6;
-    //  border: 1px solid #a0d18c;
-    //  color: #2d9fd9;
-  }
+//  input[type=email]{
+//   background-image: url("../img/email.png");
+//   background-position: 10px 4px; 
+//   background-repeat: no-repeat;
+//   background-size: 40px;
+// }
+
+// input[type=password]{
+//   background-image: url("../img/lock.png");
+//   background-position: 13px 5px; 
+//   background-repeat: no-repeat;
+//   background-size: 32px;
+// }
+
+// input[type=email],
+// input[type=password]{
+//   transition: all 0.5s;
+//   -webkit-border-radius: 20px;
+//   -moz-border-radius: 20px;
+//    border-radius: 20px;
+//    font-size: 1.2rem;
+//    border: none;
+//    border: 1px solid #a3a1a1;
+//    width: 30vw;
+//    @media (max-width: 850px){
+//     width: 70vw;
+//   }
+//    height: 45px;
+//    padding-left: 55px;
+//    background-color: #e0e0e08a;
+   
+//   }
+  
+//   input[type=email]:focus,
+// input[type=password]:focus {
+//    outline: none;
+//    background-color: #e6e6e6;
+// }
+// }
 }
