added other content links

--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -10,9 +10,48 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+
+
+    &-links{
+      padding-top: 3rem;
+      &-list{
+        font-size: 1.2rem;
+        display: flex;
+        list-style: none;
+        justify-content: space-evenly;
+        width: 50vw;
+        align-content: center;
+        align-self: center;
+        
+        li{
+          cursor: pointer;
+          &:hover{
+            color: rgb(122, 14, 7);
+          }
+        }
+      }
+    }
+
+
+
+
     &-account{
      &-content{
+      padding-top: 2.5rem;
       //  display: none;
+      transition: all 0.5s ease-in;
+      &-buttons{
+        
+        padding: 10px;
+        border: 2px solid black;
+        border-radius: 30px;
+        cursor: pointer;
+        &:hover{
+          color: rgb(0, 0, 0) !important;
+          border: 2px solid rgb(122, 14, 7);
+        }
+      }
       span{
         transition: all 0.1s ease-in;
         cursor: pointer;
