--- a/src/components/home/cards/card.scss
+++ b/src/components/home/cards/card.scss
@@ -1,15 +1,12 @@
-.brodcaster{
-  // margin-top: 70px;
-  // margin-bottom: 40px;
-}
-.bbc{
+
+.Card{
   width: inherit;
   // margin-top: 40px;
   display: grid;
-  grid-template-columns: 58% 42%;
+  grid-template-columns: 55% 39%;
   
   row-gap: 5%;
-  column-gap: 50px;
+  column-gap: 30px;
   
   a{
     text-decoration: none;
@@ -63,8 +60,8 @@
           height: 150px;
         }
         display: grid;
-        grid-template-columns: 45% 45%;
-        column-gap: 10%;
+        grid-template-columns: 48% 48%;
+        column-gap: 4%;
         // display: flex;
         // justify-content: space-between;
       }
@@ -116,11 +113,21 @@
     // width: 17vw;
     &-cnn{
       font-size: 0.9rem;
+      a{
+        h4{
+          padding-top: 10px;
+        }
+        
+      }
     }
     img{
       width: 98%;
     }
+    h4{
+      font-size: 0.9rem;
+    }
     p{
+      font-size: 0.9rem;
       padding-top: 5px;
     }
   }
